--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,3 +6,14 @@
     gap: $gap;
   }
   
+  @mixin hover-navbar($color: orange, $border-radius: 0.5em) {
+    border: 0.1em solid transparent;
+    transition: color 0.2s ease, border 0.2s ease;
+  
+    &:hover {
+      border: 0.1em solid $color;
+      color: $color;
+      border-radius: $border-radius;
+    }
+  }
+  
